[Mac] Reduce flashes in bookmark menu item

Currently when you click on an item in a folder on the
bookmarks bar, the item will flash several times to
provide feedback to the user.

This CL reduces the flashing so that it will only flash
once before closing the menu.

Bug: 640138
Change-Id: I7bbc51ae0f4c4a1aac1d908b41984efb310f3854
Reviewed-on: https://chromium-review.googlesource.com/765094
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516076}
Former-commit-id: b5e61168e5aa92de8274a0c7167f794317cc59b9